--- a/output.css
+++ b/output.css
@@ -432,6 +432,9 @@ video {
 [hidden] {
   display: none;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -456,9 +459,19 @@ video {
 .z-40 {
   z-index: 40;
 }
+.z-50 {
+  z-index: 50;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -469,11 +482,35 @@ video {
 .mt-6 {
   margin-top: 1.5rem;
 }
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
+.hidden {
+  display: none;
+}
 .h-10 {
   height: 2.5rem;
+}
+.h-16 {
+  height: 4rem;
+}
+.h-6 {
+  height: 1.5rem;
+}
+.h-\[30px\] {
+  height: 30px;
+}
+.h-\[35px\] {
+  height: 35px;
+}
+.h-\[38px\] {
+  height: 38px;
+}
+.h-\[45px\] {
+  height: 45px;
 }
 .h-full {
   height: 100%;
@@ -484,8 +521,29 @@ video {
 .w-11\/12 {
   width: 91.666667%;
 }
+.w-6 {
+  width: 1.5rem;
+}
+.w-\[30px\] {
+  width: 30px;
+}
+.w-\[35px\] {
+  width: 35px;
+}
+.w-\[45px\] {
+  width: 45px;
+}
 .w-full {
   width: 100%;
+}
+.w-screen {
+  width: 100vw;
+}
+.max-w-7xl {
+  max-width: 80rem;
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 @keyframes pulse {
   50% {
@@ -507,8 +565,19 @@ video {
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
+.gap-4 {
+  gap: 1rem;
+}
 .gap-6 {
   gap: 1.5rem;
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-hidden {
   overflow: hidden;
@@ -518,6 +587,10 @@ video {
 }
 .rounded {
   border-radius: 0.25rem;
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-blue-500 {
   --tw-bg-opacity: 1;
@@ -531,8 +604,15 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
+}
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -547,11 +627,20 @@ video {
 .p-6 {
   padding: 1.5rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-.text-left {
-  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -560,20 +649,29 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.leading-none {
-  line-height: 1;
+.font-bold {
+  font-weight: 700;
+}
+.font-normal {
+  font-weight: 400;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-blue-400 {
   --tw-text-opacity: 1;
@@ -582,6 +680,20 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.opacity-90 {
+  opacity: 0.9;
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.duration-150 {
+  transition-duration: 150ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap');
@@ -596,8 +708,26 @@ body {
 h1, h2 {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
+}
+
+.oswald {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal; 
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -608,36 +738,57 @@ h1, h2 {
   .sm\:mt-16 {
     margin-top: 4rem;
   }
+  .sm\:h-\[40px\] {
+    height: 40px;
+  }
+  .sm\:h-\[45px\] {
+    height: 45px;
+  }
+  .sm\:h-\[47px\] {
+    height: 47px;
+  }
+  .sm\:h-\[55px\] {
+    height: 55px;
+  }
   .sm\:w-1\/2 {
     width: 50%;
   }
-  .sm\:text-center {
-    text-align: center;
+  .sm\:w-\[40px\] {
+    width: 40px;
+  }
+  .sm\:w-\[45px\] {
+    width: 45px;
+  }
+  .sm\:w-\[55px\] {
+    width: 55px;
+  }
+  .sm\:gap-8 {
+    gap: 2rem;
+  }
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
-  }
   .md\:mt-20 {
     margin-top: 5rem;
   }
-  .md\:h-20 {
-    height: 5rem;
+  .md\:flex {
+    display: flex;
   }
-  .md\:w-20 {
-    width: 5rem;
+  .md\:hidden {
+    display: none;
+  }
+  .md\:h-16 {
+    height: 4rem;
+  }
+  .md\:w-16 {
+    width: 4rem;
   }
   .md\:bg-transparent {
     background-color: transparent;
-  }
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-  .md\:leading-tight {
-    line-height: 1.25;
   }
 }
 
@@ -654,15 +805,12 @@ h1, h2 {
   .lg\:gap-8 {
     gap: 2rem;
   }
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
   .lg\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
-  }
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-  .lg\:leading-normal {
-    line-height: 1.5;
   }
 }
