--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,13 @@ body {
 h1, h2 {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
+}
+
+.oswald {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal; 
 }
