--- a/output.css
+++ b/output.css
@@ -453,6 +453,9 @@ video {
 .left-0 {
   left: 0px;
 }
+.right-0 {
+  right: 0px;
+}
 .right-4 {
   right: 1rem;
 }
@@ -488,8 +491,8 @@ video {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 .mr-4 {
   margin-right: 1rem;
@@ -499,12 +502,6 @@ video {
 }
 .mt-4 {
   margin-top: 1rem;
-}
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.box-border {
-  box-sizing: border-box;
 }
 .flex {
   display: flex;
@@ -569,11 +566,12 @@ video {
 .w-\[45px\] {
   width: 45px;
 }
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .w-full {
   width: 100%;
-}
-.w-screen {
-  width: 100vw;
 }
 .max-w-4xl {
   max-width: 56rem;
@@ -583,6 +581,10 @@ video {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.-translate-y-full {
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -594,6 +596,9 @@ video {
 }
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+.cursor-none {
+  cursor: none;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -619,10 +624,20 @@ video {
 .gap-6 {
   gap: 1.5rem;
 }
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-12 {
+  row-gap: 3rem;
+}
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.self-start {
+  align-self: flex-start;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -630,30 +645,19 @@ video {
 .overflow-y-hidden {
   overflow-y: hidden;
 }
-.rounded {
-  border-radius: 0.25rem;
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .rounded-md {
   border-radius: 0.375rem;
 }
-.border-2 {
-  border-width: 2px;
-}
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-zinc-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
 }
 .bg-zinc-800 {
   --tw-bg-opacity: 1;
@@ -680,22 +684,19 @@ video {
   --tw-gradient-to: rgb(39 39 42 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.via-zinc-300 {
+  --tw-gradient-to: rgb(212 212 216 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #d4d4d8 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+.to-zinc-800 {
+  --tw-gradient-to: #27272a var(--tw-gradient-to-position);
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
 }
 .p-2 {
   padding: 0.5rem;
-}
-.p-4 {
-  padding: 1rem;
-}
-.p-6 {
-  padding: 1.5rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -705,9 +706,9 @@ video {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-8 {
   padding-top: 2rem;
@@ -741,6 +742,10 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -763,17 +768,13 @@ video {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
-}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-zinc-900 {
+.text-zinc-800 {
   --tw-text-opacity: 1;
-  color: rgb(24 24 27 / var(--tw-text-opacity));
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 .opacity-90 {
   opacity: 0.9;
@@ -785,6 +786,9 @@ video {
 }
 .duration-150 {
   transition-duration: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -822,11 +826,11 @@ h2 {
   font-style: normal;
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   .card {
     clip-path: polygon(16% 0, 100% 0%, 84% 100%, 0% 100%);
   }
-}
+} */
 
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
@@ -834,19 +838,9 @@ h2 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:bg-zinc-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-zinc-400:hover {
@@ -854,8 +848,18 @@ h2 {
   color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 
-.hover\:underline:hover {
-  text-decoration-line: underline;
+.hover\:text-zinc-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:bg-opacity-0 {
+  --tw-bg-opacity: 0;
 }
 
 @media (min-width: 640px) {
@@ -886,6 +890,9 @@ h2 {
   .sm\:w-\[55px\] {
     width: 55px;
   }
+  .sm\:flex-row {
+    flex-direction: row;
+  }
   .sm\:gap-8 {
     gap: 2rem;
   }
@@ -914,14 +921,6 @@ h2 {
   .md\:bg-transparent {
     background-color: transparent;
   }
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .md\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -939,6 +938,9 @@ h2 {
 @media (min-width: 1024px) {
   .lg\:ml-4 {
     margin-left: 1rem;
+  }
+  .lg\:mr-12 {
+    margin-right: 3rem;
   }
   .lg\:mr-8 {
     margin-right: 2rem;
@@ -960,6 +962,9 @@ h2 {
   }
   .lg\:gap-8 {
     gap: 2rem;
+  }
+  .lg\:bg-opacity-30 {
+    --tw-bg-opacity: 0.3;
   }
   .lg\:text-2xl {
     font-size: 1.5rem;
